# chip8_emulator

./: CMakeLists.txt  Makefile  README.md  gitignore
src/: chip8.cpp  chip8.h  main.cpp
